# cis_194_intro_to_haskell

./: README.md
fa14_hw09_testing/: CHANGELOG.md  fa14-hw09-testing.cabal
fa14_hw09_testing/src/: BST.hs  Ring.hs
fa14_hw09_testing/tests/: BSTTests.hs  Main.hs  ParserTests.hs  RingTests.hs
fa14_hw10_gloss/: CHANGELOG.md  README.md  fa14-hw10-gloss.cabal
fa14_hw10_gloss/app/: Main.hs
fa14_hw10_gloss/src/: Pong.hs
fa14_w12_concurrency_parallelism/: CHANGELOG.md  README.md  fa14-w12-concurrency-parallelism.cabal
fa14_w12_concurrency_parallelism/app/compressor/: Main.hs
fa14_w12_concurrency_parallelism/src/: Chan.hs  MVarExample.hs  NiceFork.hs
fa16_hw11_functional_reactive_programming/: CHANGELOG.md  LICENSE  fa16-hw11-frp.cabal
fa16_hw11_functional_reactive_programming/app/: Main.hs
hw01/: hw01.cabal
hw01/src/: HanoiTowers.hs  ValidatingCreditCards.hs
hw01/test/: HW01Tests.hs  HanoiTowersTests.hs  ValidatingCreditCardsTests.hs
hw02/: hw02.cabal
hw02/app/: Main.hs
hw02/src/: LogAnalysis.hs
hw02/tests/: Exercise01Tests.hs  Exercise02Tests.hs  Exercise03Tests.hs  Exercise04Tests.hs  Exercise05Tests.hs  Main.hs
hw03/: hw03.cabal
hw03/src/: Golf.hs
hw03/tests/: Exercise01Tests.hs  Exercise02Tests.hs  Exercise03Tests.hs  Main.hs
hw04/: hw04.cabal
hw04/src/: Hw04.hs
hw04/tests/: Exercise01Tests.hs  Exercise02Tests.hs  Exercise03Tests.hs  Exercise04Tests.hs  Main.hs
hw05/: hw05.cabal
hw05/src/: Calc.hs  StackVM.hs
hw05/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Exercise05.hs  Exercise06.hs  Main.hs
hw06/: hw06.cabal
hw06/src/: Fibonacci.hs
hw06/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise07.hs  Main.hs
hw07/: CHANGELOG.md  hw07.cabal
hw07/app/: Main.hs
hw07/src/: JoinList.hs  Scrabble.hs  Sized.hs
hw07/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Main.hs
hw08/: CHANGELOG.md  hw08.cabal
hw08/app/: Main.hs
hw08/src/: Party.hs
hw08/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Exercise05.hs  Main.hs
hw10/: hw10.cabal
hw10/src/: AParser.hs
hw10/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Exercise05.hs  Main.hs
hw11/: hw11.cabal
hw11/app/: Main.hs
hw11/src/: SExpr.hs
hw11/tests/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Main.hs
hw12/: hw12.cabal
hw12/app/: Main.hs
hw12/src/: Risk.hs
